Update buttons' state when FindPboard is updated

When global FindPboard is updated, find result is cleared
and next/prev buttons are disabled. But this makes
users unabled to find the exact string without
editing text. So enable buttons unless the text from pboard
is empty.

Bug: 739735
Change-Id: Iad72ae1e0a88165774fecd21fe26c3a2949c60c4
Reviewed-on: https://chromium-review.googlesource.com/888229
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532459}
Former-commit-id: a3a307c83a7458e64919925169c2dca0b3ca8049